48
================

06/09/23 Throw readable exception if account exists during payment type create
06/09/23 Do not create new account if specified during payment type create
06/09/23 Use shorter married format {first1} & {first2} {surname} for couples
05/09/23 Hide frame around home page animal links if they are hidden
05/09/23 PetRescue: Move org specific fields to config instead of as additional
04/09/23 Fix overview counts to exclude non-archived where necessary
01/09/23 Add overview counts to homepage, tidy up layout
31/08/23 Add picnumber field for PetRescue
30/08/23 type hints, log, lookup and lostfound modules #1320
30/08/23 type hints, html module #1320
29/08/23 Fix date parsing bug for Sweden caused by refactoring
29/08/23 Renew licence button now calculates dates correctly #728
29/08/23 Minor layout/style tweaks to animal links on home/shelterview
29/08/23 Refactor all unit tests to use self.assertX instead of assert #1323
29/08/23 Check for invalid waiting list put on date as well as blank
28/08/23 New cron task for maint_db_dump_zip 
28/08/23 Add columns, generate licence renewal token and renewed flag #728
27/08/23 type hints, dbupdate, remove __version__.py from git #1320
26/08/23 type hints, i18n, fix bug in display2python with bad ISO date #1320
26/08/23 type hints, financial, geo #1320
25/08/23 Rename code.py, move BUILD/VERSION into their own module
23/08/23 Fix NPE when stripping line breaks from bio in adoptable_js
23/08/23 type hints clinic, diary, event #1320
23/08/23 <<AgeYM>> token to show age with years and months
23/08/23 Allow sorting by unit on animal observations #1321
23/08/23 type hints db, dbfs #1320
23/08/23 type hints up to "c" modules #1320
22/08/23 Fix for NPE in DISPLAYLOCATION when using mobile_photo_upload
22/08/23 Additional wordkeys for CurrentVet 
22/08/23 Abstracted Python3 type hint framework, added to "a" modules #1320
21/08/23 Make new mobile UI the default #1096